--- a/NeuroHack/NeuroHack/NeuroHack.csproj
+++ b/NeuroHack/NeuroHack/NeuroHack.csproj
@@ -12,6 +12,8 @@
 
   <ItemGroup>
     <PackageReference Include="MySqlConnector" Version="2.2.5" />
+    <PackageReference Include="Syncfusion.Xamarin.SfRangeSlider" Version="21.1.39" />
+    <PackageReference Include="Xamarin.CommunityToolkit" Version="1.1.0" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="Xamarin.Forms.PancakeView" Version="2.0.0.691" />
@@ -26,5 +28,10 @@
   <ItemGroup>
     <Folder Include="ViewModel\" />
     <Folder Include="Music\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="MessageBox.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
