--- a/NeuroHack/NeuroHack/NeuroHack.csproj
+++ b/NeuroHack/NeuroHack/NeuroHack.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -12,8 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="MySqlConnector" Version="2.2.5" />
-    <PackageReference Include="Syncfusion.Xamarin.SfRangeSlider" Version="21.1.39" />
-    <PackageReference Include="Xamarin.CommunityToolkit" Version="1.1.0" />
+    <PackageReference Include="Xamarin.CommunityToolkit" Version="1.3.2" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="Xamarin.Forms.PancakeView" Version="2.0.0.691" />
@@ -26,7 +25,6 @@
     <None Remove="Plugin.MediaManager.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="ViewModel\" />
     <Folder Include="Music\" />
   </ItemGroup>
   <ItemGroup>
